--- a/app/src/main/res/layout/activity_article.xml
+++ b/app/src/main/res/layout/activity_article.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:focusableInTouchMode="true"
     android:orientation="vertical"
-    tools:context="mscc.net.churchdirectory.com.net.churchdirectory.ui.activity.ContactDetailsActivity">
+    tools:context="mscc.net.churchdirectory.ui.activity.ContactDetailsActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -102,11 +102,28 @@
                         android:textSize="@dimen/text_size_content"
                         android:transitionName="article_content" />
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_10sdp">
+
+                        <Button
+                            android:id="@+id/readMoreButton"
+                            android:visibility="invisible"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Read More"
+                            android:layout_marginLeft="@dimen/_30sdp"
+                            android:layout_marginRight="@dimen/_30sdp"
+                            android:layout_marginBottom="@dimen/_10sdp"
+                            android:background="@color/drawer"
+                            android:textColor="@color/white"></Button>
+                    </LinearLayout>
+
 
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
-
 
         </LinearLayout>
 
