--- a/app/src/main/res/layout/activity_articles.xml
+++ b/app/src/main/res/layout/activity_articles.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="mscc.net.churchdirectory.com.net.churchdirectory.ui.activity.ArticlesActivity">
+    tools:context="mscc.net.churchdirectory.ui.activity.ArticlesActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
