--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -6,7 +6,7 @@
         <item
             android:id="@+id/drawer_menu_about"
             android:icon="@drawable/ic_church_black"
-            android:title="About" />
+            android:title="About Church" />
 
         <item
             android:id="@+id/drawer_menu_profile"
@@ -26,7 +26,7 @@
         <item
             android:id="@+id/drawer_menu_news"
             android:icon="@drawable/ic_notifications_black_24dp"
-            android:title="News and Events" />
+            android:title="Announcements" />
 
         <item
             android:id="@+id/drawer_menu_articles"
@@ -58,6 +58,11 @@
             android:id="@+id/drawer_menu_timing"
             android:icon="@drawable/ic_timer_black_24dp"
             android:title="Holy Mass Timings" />
+
+        <item
+            android:id="@+id/drawer_menu_links"
+            android:icon="@drawable/ic_public_black_24dp"
+            android:title="LINKS" />
 
         <item
             android:id="@+id/drawer_menu_contact_us"
