--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -62,7 +62,7 @@
         <item
             android:id="@+id/drawer_menu_links"
             android:icon="@drawable/ic_public_black_24dp"
-            android:title="LINKS" />
+            android:title="Ecclesial Links" />
 
         <item
             android:id="@+id/drawer_menu_contact_us"
@@ -79,7 +79,7 @@
 
         <item
             android:id="@+id/drawer_menu_logout"
-            android:icon="@drawable/ic_exit_to_app_black_24dp"
+            android:icon="@drawable/ic_power_settings_new_black_24dp"
             android:title="Logout" />
 
 
