--- a/app/src/main/res/layout/card_committees.xml
+++ b/app/src/main/res/layout/card_committees.xml
@@ -38,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="@string/placeholder_content_description_family_image"
-                android:scaleType="centerCrop"
+                android:scaleType="fitCenter"
                 android:src="@drawable/image_committee"
                 android:transitionName="contact_image" />
 
