--- a/app/src/main/res/layout/card_notification.xml
+++ b/app/src/main/res/layout/card_notification.xml
@@ -4,8 +4,6 @@
     android:id="@+id/cardview_notification"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="2dp"
-    android:layout_marginTop="2dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackground"
@@ -16,17 +14,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/notification_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/ic_placeholder_background" />
+            android:src="@drawable/announcementicon" />
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:background="@color/white"
@@ -36,8 +38,7 @@
                 android:id="@+id/notification_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_gravity="end"
                 android:text="@string/placeholder_date_time"
                 android:textColor="@color/textSecondary"
                 android:textSize="12sp" />
@@ -45,13 +46,13 @@
             <TextView
                 android:id="@+id/notification_text"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_height="match_parent"
+                android:justificationMode="inter_word"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="5dp"
                 android:text=""
                 android:textColor="@color/textPrimary"
-                android:textSize="@dimen/text_size_sub_heading" />
+                android:textSize="@dimen/_10sdp" />
 
 
         </LinearLayout>
